# Dec 6, 2025 (Alpha 1.7.0)
account emails are now hidden by default, and can be shown by pressing a button
added settings page
added name change UI
added flags for restricting who can send a friend request to an account (NOTE: all requests are enabled by default)
added icons to the friend request buttons
friend requests now supported
added community page
fixed an issue with incorrect endpoints being used for accounts
fixed a few issues related to bots
created development environment

# Nov 26, 2025 (Alpha 1.6.1)
fixed an issue that caused replay files for boards over 32 tiles or with more than 7 players to be generated with irrecoverable missing data

# Nov 25, 2025 (Alpha 1.6.0)
bot freya now limited to 20 move lookahead
maximum board size decreased to 15x15
ghost bots fixed
active player leaving no longer causes soft lock
players can no longer be assigned to the neutral team
using the back button to navigate page history no longer results in "game not found" error when creating a room

# Nov 24, 2025 (Alpha 1.5.2)
updated cookie disclosure to clarify what information is sent to the server

# Nov 24, 2025 (Alpha 1.5.1)
added ability to reset your password
fixed a scaling issue that caused banners to display inside of other text

# Nov 24, 2025 (Alpha 1.5.0)
added bot Freya
changed bot Constantine's difficulty to Trivial
added proper beginner version of Constantine with significant buffs

# Nov 20, 2025 (Alpha 1.4.6)
updated tutorial again

# Nov 19, 2025 (Alpha 1.4.5)
fixed the bug where players leaving a room when the game finished were double-counted
changed the tutorial highlighting to make click targets more obvious
added autoplay to replay viewer
changed the default rendering mode to concentric
made a minor update to the way room select displays spectate links
added a refresh button to room select

# Nov 18, 2025 (Alpha 1.4.4)
fixed an issue with concentric rendering looking cursed when not at default zoom
increased session timeout to one day
