@@ -157,6 +157,7 @@
             <div>
                 <a target="_blank" href="https://github.com/radicise/territopple" class="button-link">Check Out The GitHub!</a>
                 <a onclick="document.getElementById('credits-modal').hidden=false;" class="button-link">About & Credits</a>
+                <a target="_blank" href="https://discord.gg/S7SCQEtQnM" class="button-link">Join The Discord!</a>
             </div>
             <!-- <a onclick="window.alert('not implemented yet');" class="button-link">Want To Host Your Own Server?</a>
             <a onclick="window.alert('not implemented yet');" class="button-link">Want To Host Your Own Server?</a>
