@@ -147,9 +147,9 @@
                             <!-- //// TOPOLOGY CONFIG POINT //// -->
                             <div class="form-row dimensions show">
                                 <label for="room-create-g2d-w">Width:</label>
-                                <input type="number" id="room-create-g2d-w" data-watch value="5" min="1" max="15">
+                                <input type="number" id="room-create-g2d-w" data-watch value="5" min="1" max="36">
                                 <label for="room-create-g2d-h">Height:</label>
-                                <input type="number" id="room-create-g2d-h" data-watch value="5" min="1" max="15">
+                                <input type="number" id="room-create-g2d-h" data-watch value="5" min="1" max="36">
                             </div>
                         </div>
                         <div class="form-row">
